--- a/teos/programs/teos/teoslib/CMakeLists.txt
+++ b/teos/programs/teos/teoslib/CMakeLists.txt
@@ -1,22 +1,26 @@
 
 set(LIB_NAME "teoslib")
-add_library(${LIB_NAME} STATIC 
-  teos_command.hpp 
-  teos_get_commands.hpp 
-  teos_wallet_commands.hpp
-  teos_create_commands.hpp
-  teos_command.cpp 
-  teos_get_commands.cpp
-  teos_wallet_commands.cpp
-  teos_create_commands.cpp
-  subcommands.cpp
-  ../teos_test.cpp
+
+file(GLOB HEADERS "include/*.hpp")
+file(GLOB SRC LIST_DIRECTORIES false "src/*.cpp")
+add_library(${LIB_NAME} STATIC
+  ${HEADERS}
+  ${SRC}
   )
 
 target_include_directories( ${LIB_NAME} 
   PRIVATE
     ${Boost_INCLUDE_DIR}
-
+    ${OPENSSL_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/libraries/fc/include
+    ${CMAKE_SOURCE_DIR}/libraries/types/include
+    ${CMAKE_SOURCE_DIR}/libraries/utilities/include
+    ${CMAKE_SOURCE_DIR}/libraries/appbase/include
+    ${CMAKE_SOURCE_DIR}/libraries/chainbase/include
+		${CMAKE_SOURCE_DIR}/libraries/chain/include
+		${CMAKE_SOURCE_DIR}/plugins/chain_plugin/include
+		${CMAKE_SOURCE_DIR}/plugins/database_plugin/include
+    include
   PUBLIC
     ${HELPER_INCLUDE}
     include
@@ -24,7 +28,7 @@ target_include_directories( ${LIB_NAME}
 )
 
 install ( TARGETS ${LIB_NAME} DESTINATION lib )
-install ( FILES 
+install ( FILES   
   teos_command.hpp 
   teos_get_commands.hpp 
   teos_wallet_commands.hpp
