python teos started

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ workdir
 *.exe
 build
 buildWindows
+
 **/Debug
 **/x64
 **/.vs
@@ -10,3 +11,6 @@ buildWindows
 eosc/eosc_visual_studio/eoscLib.pdb
 *.lib
 eos_libraries/visual_studio/test.exp
+
+__pycache__
+python/Doxy
