--- a/teos/config.json.in
+++ b/teos/config.json.in
@@ -2,7 +2,7 @@
   "EOSIO_INSTALL_DIR":"@EOSIO_INSTALL_DIR@",
   "EOSIO_SOURCE_DIR":"@EOSIO_SOURCE_DIR@",
   "LOGOS_DIR":"@LOGOS_DIR@",
-  "CHAIN_NODE":"eosio",
+  "DAEMON_NAME":"eosio",
   "WASM_CLANG":"@WASM_CLANG@",
   "WASM_LLVM_LINK":"@WASM_LLVM_LINK@",
   "WASM_LLC":"@WASM_LLC@",
