--- a/teos/teoslib/config.h.in
+++ b/teos/teoslib/config.h.in
@@ -6,6 +6,5 @@
 #define CONFIG_JSON @CONFIG_JSON@
 #define LOGGING_DIR @LOGGING_DIR@
 #define TEST_ADDRESS @TEST_ADDRESS@
-#define TEST_HOST @TEST_HOST@
-#define TEST_PORT @TEST_PORT@
+#define TEST_HTTP_ADDRESS @TEST_HTTP_ADDRESS@
 
