--- a/eosLib/.vscode/settings.json
+++ b/eosLib/.vscode/settings.json
@@ -8,7 +8,7 @@
    "cSpell.words": [
       "Esod",
       "constexpr",
-      "eosio",
+      "eosiod",
       "eoslib",
       "ptree",
       "uint"
