--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,43 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+      {
+          "name": "(gdb) set currency",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "/mnt/hgfs/Workspaces/EOS/Logos/teos/build/teos",
+          "args": ["set", "contract", "currency", "currency.wast", "currency.abi"],
+          "stopAtEntry": false,
+          "cwd": "/mnt/hgfs/Workspaces/EOS/Logos/teos/build",
+          "environment": [],
+          "externalConsole": true,
+          "MIMode": "gdb",
+          "setupCommands": [
+              {
+                  "description": "Enable pretty-printing for gdb",
+                  "text": "-enable-pretty-printing",
+                  "ignoreFailures": true
+              }
+          ]
+      },
+    {
+      "name": "(gdb) get code",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "/mnt/hgfs/Workspaces/EOS/Logos/teos/build/teos",
+      "args": ["get", "code", "currency"],
+      "stopAtEntry": false,
+      "cwd": "/mnt/hgfs/Workspaces/EOS/Logos/teos/build",
+      "externalConsole": true,
+      "MIMode": "gdb",
+      "setupCommands": [
+          {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          }
+      ]
+    },
     {
       "name": "(gdb) wallet create",
       "type": "cppdbg",
@@ -96,7 +133,7 @@
               "description": "Enable pretty-printing for gdb",
               "text": "-enable-pretty-printing",
               "ignoreFailures": true
-          }password
+          }
       ]
     },
     {
