--- a/teos/config.json.in
+++ b/teos/config.json.in
@@ -1,8 +1,7 @@
 {
-  "EOSIO_INSTALL_DIR":"@EOSIO_INSTALL_DIR@",
   "EOSIO_SOURCE_DIR":"@EOSIO_SOURCE_DIR@",
   "LOGOS_DIR":"@LOGOS_DIR@",
-  "DAEMON_NAME":"eosiod",
+  "DAEMON_NAME":"nodeos",
   "WASM_CLANG":"@WASM_CLANG@",
   "WASM_LLVM_LINK":"@WASM_LLVM_LINK@",
   "WASM_LLC":"@WASM_LLC@",
