--- a/teos/include/teos/config.json
+++ b/teos/include/teos/config.json
@@ -1,8 +1,7 @@
 {
-  "EOSIO_INSTALL_DIR":"",
   "EOSIO_SOURCE_DIR":"/mnt/hgfs/Workspaces/EOS/eos/",
   "LOGOS_DIR":"/mnt/hgfs/Workspaces/EOS/Logos",
-  "DAEMON_NAME":"eosiod",
+  "DAEMON_NAME":"nodeos",
   "WASM_CLANG":"/opt/wasm/bin/clang",
   "WASM_LLVM_LINK":"/opt/wasm/bin/llvm-link",
   "WASM_LLC":"/opt/wasm/bin/llc",
